<resources>
    <string name="app_name">SARA</string>
    <string name="content">Hey Sara</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="chooseLanguage">Choose Language</string>
    <string name="logout">Logout</string>
    <string name="english">English</string>
    <string name="korea">Korea</string>
    <string name="china">China</string>
</resources>